[package]
name = "epubsplit-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
zip = "2.2"
quick-xml = "0.37"
percent-encoding = "2.3"
scraper = "0.22"
regex = "1.11"
uuid = { version = "1.11", features = ["v4"] }
sha1 = "0.10"
